--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation "org.assertj:assertj-core:3.24.2"
+    implementation "com.google.guava:guava:31.1-jre"
+    implementation 'ch.qos.logback:logback-classic:1.1.2'
 }
 
 test {
